--- a/index.html
+++ b/index.html
@@ -186,17 +186,16 @@
             <div class="row text-center">
                  <div class="col-xl-10 col-xl-offset-1 col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
 					<p><h3><a href="https://www.eventbrite.com/e/brainhack-dartmouth-tickets-31611515895" target="_blank">Registration for the Dartmouth Brainhack 2017 is now open!</a></h3></p>
-
 		            <p>The Dartmouth Brainhack 2017 is an official satellite event of the <a href="http://events.brainhack.org/global2017/" target="_blank">International Global Brainhack 2017</a>, organized by Cameron Craddock.
                         The goal of the hackathon is to bring together researchers with disparate backgrounds to collaborate on open science projects in neuroimaging.</p>
                  </div>
                 <div class="col-xl-10 col-xl-offset-1 col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
                     <br><br>
 					<h4>Dates: March 02-05, 2017</h4>
-					<h4>Costs: free for members of the Dartmouth community</h4>
 					<h4>Location: <a href="#map"> Hanover, NH, USA</a></h4>
-                    <h4>Registration: <a href="https://www.eventbrite.com/e/brainhack-dartmouth-tickets-31611515895">please register on Eventbrite</a></h4>
-                    <br><br>
+          <h4>Registration: <a href="https://www.eventbrite.com/e/brainhack-dartmouth-tickets-31611515895">please register on Eventbrite</a></h4>
+          <h4>Thanks to our <a href="#sponsors">sponsors</a>, the registration is free<br>and includes breakfast, lunch, and dinner.</h4>
+          <br><br>
 					<p>Participants are encouraged to post project ideas to <a href="http://www.brainhack.org" target="_blank">www.brainhack.org</a> and to submit a report describing their project to the <a href="http://www.brainhack.org/proceedings">2017 Brainhack Proceedings</a> that will be published by <a href="http://gigasciencejournal.com/">Gigascience</a> after the event.</p>
 					<p>Please join <a href="https://brainhack-slack-invite.herokuapp.com/" target="_blank">the Brainhack Slack project</a> for updated information on the developing Hackathon content and to contribute your own ideas.</p>
                 </div>
@@ -213,7 +212,7 @@
                 </div>
             </div>
             <section id="calendar" class="map">
-                <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&showNav=0&showPrint=0&showTabs=0&showCalendars=0&mode=WEEK&dates=20170302%2F20170305&height=500&wkst=2&bgcolor=%23FFFFFF&src=kvcsa5pd7v9i3rm66k3dsd5ots%40group.calendar.google.com&ctz=America/New_York" style="border-width:0" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
+                <iframe width="100%" height="100%" src="https://calendar.google.com/calendar/embed?showTitle=0&showNav=0&showPrint=0&showTabs=0&showCalendars=0&mode=WEEK&dates=20170302%2F20170305&height=500&wkst=2&bgcolor=%23FFFFFF&src=kvcsa5pd7v9i3rm66k3dsd5ots%40group.calendar.google.com&ctz=America/New_York" style="border-width:0" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
                 <br/>
             </section>
         </div>
@@ -242,27 +241,33 @@
     <section id="sponsors" class="no-padding">
         <div class="container-fluid">
             <div class="row top30 no-gutter">
-				<div class="col-lg-12 text-center">
-				    <br><h3 class="text-color-blue"><strong>The Dartmouth Brainhack 2017 is generously sponsored by:</strong></h3><br><br>
-			    </div>
-			</div>
-        </div>
-        <div class="row no-gutter vertical-align">
-                <div class="text-center col-lg-4 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
-                    <a href="https://dartmouth.edu/faculty-directory/jay-g-hull" target="_blank">
-                        <!-- <img src="https://dartmouth.edu/faculty-directory/sites/dartmouth.edu.faculty-directory/files/styles/profile_image/public/jay.g.hull__1.jpg" class="img-responsive center-block" alt=""> -->
-                        <div class="center-block">Jay Hull, Associate Dean of Social Sciences</div>
-                    </a>
-                </div>
-              <div class="col-lg-4 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
-                  <a href="http://www.dartmouth.edu/~ccn" target="_blank">
-                    <img src="http://www.dartmouth.edu/~ccn/_permacode/current/styles/images/header_full.jpg" class="img-responsive center-block" alt="">
+				      <div class="col-lg-12 text-center">
+				        <br><h3 class="text-color-blue"><strong>Dartmouth Brainhack 2017 is generously sponsored by:</strong></h3>
+			        </div>
+			      </div>
+          <div class="row vertical-align">
+              <div class="col-lg-8 col-lg-offset-3 col-md-8 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+                  <a href="http://neukom.dartmouth.edu" target="_blank">
+                    <img src="img/neukom.png" class="img-responsive center-block" alt="Neukom Institute"/>
                   </a>
               </div>
-            <div class="col-lg-4 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
-                <a href="http://www.amplemeal.com" target="_blank">
-                    <img src="https://cdn.shopify.com/s/files/1/1096/7494/t/8/assets/logo.png" class="img-responsive center-block" alt="">
-                </a>
+          </div>
+          <div class="row vertical-align">
+              <div class="col-lg-4 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+                  <a href="http://www.dartmouth.edu/~ccn" target="_blank">
+                    <img src="http://www.dartmouth.edu/~ccn/_permacode/current/styles/images/header_full.jpg" class="img-responsive center-block" alt="Center for Cognitive Neuroscience">
+                  </a>
+              </div>
+              <div class="text-center col-lg-4 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+                  <div class="center-block">
+                    <h4><a href="https://dartmouth.edu/faculty-directory/jay-g-hull" target="_blank">Jay Hull,<br>Associate Dean of Social Sciences</a></h4>
+                  </div>
+              </div>
+              <div class="col-lg-4 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+                  <a href="http://www.amplemeal.com" target="_blank">
+                      <img src="https://cdn.shopify.com/s/files/1/1096/7494/t/8/assets/logo.png" class="img-responsive center-block" alt="Ample Meal">
+                  </a>
+              </div>
             </div>
         </div>
 
