--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
           <div class="row vertical-align">
               <div class="col-lg-4 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
                   <a href="http://www.dartmouth.edu/~ccn" target="_blank">
-                    <img src="http://www.dartmouth.edu/~ccn/_permacode/current/styles/images/header_full.jpg" class="img-responsive center-block" alt="Center for Cognitive Neuroscience">
+                    <img src="img/ccn_logo.jpg" class="img-responsive center-block" alt="Center for Cognitive Neuroscience">
                   </a>
               </div>
               <div class="text-center col-lg-4 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
@@ -265,7 +265,7 @@
               </div>
               <div class="col-lg-4 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
                   <a href="http://www.amplemeal.com" target="_blank">
-                      <img src="https://cdn.shopify.com/s/files/1/1096/7494/t/8/assets/logo.png" class="img-responsive center-block" alt="Ample Meal">
+                      <img src="img/ample_logo.png" class="img-responsive center-block" alt="Ample Meal">
                   </a>
               </div>
             </div>
