--- a/index.html
+++ b/index.html
@@ -185,8 +185,9 @@
             <div class="row text-center">
                  <div class="col-xl-10 col-xl-offset-1 col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
 					<p><h3><a href="https://www.eventbrite.com/e/brainhack-dartmouth-tickets-31611515895" target="_blank">Registration for the Dartmouth Brainhack 2017 is now open!</a></h3></p>
-		            <p>The Dartmouth Brainhack 2017 is an official satellite event of the <a href="http://events.brainhack.org/global2017/" target="_blank">International Global Brainhack 2017</a>, organized by Cameron Craddock.
-                        The goal of the hackathon is to bring together researchers with disparate backgrounds to collaborate on open science projects in neuroimaging.</p>
+		            <p>Dartmouth Brainhack 2017 is part of <a href="http://events.brainhack.org/global2017/" target="_blank">Brainhack Global 2017</a>, organized by 
+                <a href="https://childmind.org/bio/cameron-craddock-phd/">Cameron Craddock</a>.
+                        The goal of this event is to bring together researchers with disparate backgrounds to collaborate on open science projects in neuroimaging.</p>
                  </div>
                 <div class="col-xl-10 col-xl-offset-1 col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
                     <br><br>
