--- a/index.html
+++ b/index.html
@@ -241,29 +241,27 @@
     <section id="sponsors" class="no-padding">
         <div class="container-fluid">
             <div class="row top30 no-gutter">
-				      <div class="col-lg-12 text-center">
+				      <div class="col-xs-12 text-center">
 				        <br><h3 class="text-color-blue"><strong>Dartmouth Brainhack 2017 is generously sponsored by:</strong></h3>
 			        </div>
 			      </div>
-          <div class="row vertical-align">
-              <div class="col-lg-8 col-lg-offset-3 col-md-8 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+          <div class="row no-gutter">
+              <div class="text-center col-md-9 col-md-offset-2 col-xs-12">
                   <a href="http://neukom.dartmouth.edu" target="_blank">
                     <img src="img/neukom.png" class="img-responsive center-block" alt="Neukom Institute"/>
                   </a>
               </div>
-          </div>
-          <div class="row vertical-align">
-              <div class="col-lg-4 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+              <div class="col-md-4 col-xs-12">
                   <a href="http://www.dartmouth.edu/~ccn" target="_blank">
                     <img src="img/ccn_logo.jpg" class="img-responsive center-block" alt="Center for Cognitive Neuroscience">
                   </a>
               </div>
-              <div class="text-center col-lg-4 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+              <div class="text-center col-md-4 col-xs-12">
                   <div class="center-block">
                     <h4><a href="https://dartmouth.edu/faculty-directory/jay-g-hull" target="_blank">Jay Hull,<br>Associate Dean of Social Sciences</a></h4>
                   </div>
               </div>
-              <div class="col-lg-4 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+              <div class="col-md-4 col-xs-12">
                   <a href="http://www.amplemeal.com" target="_blank">
                       <img src="img/ample_logo.png" class="img-responsive center-block" alt="Ample Meal">
                   </a>
