--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                 <a href="#details" onclick = $("#menu-close").click(); >Details</a>
             </li>
             <li>
+                <a href="#projects" onclick = $("#menu-close").click(); >Current Projects</a>
+            </li>
+            <li>
                 <a href="#schedule" onclick = $("#menu-close").click(); >Schedule</a>
             </li>
             <li>
@@ -86,7 +89,7 @@
             <br>
 			<a href="https://www.eventbrite.com/myevent?eid=31611515895" target="_blank" class="btn btn-dark btn-lg top5 left5">Register Now</a>
       <a href="https://brainhack-slack-invite.herokuapp.com/" target="_blank" class="btn btn-dark btn-lg top5 left5">Join Brainhack on Slack</a>
-      <a href="http://brainhack.org/submit-project/" target="_blank" class="btn btn-dark btn-lg top5 left5">Submit a Project</a><br><br>
+      <a href="#projects" target="_blank" class="btn btn-dark btn-lg top5 left5">Current Projects</a><br><br>
             <br><br>
             <p>Photo by <a href="http://www.dartmouth.edu/~gallery/downloads/images/sunset-1280x1024.jpg">Kawakahi Kaeo Amina '09</a></p>
             <!-- <a href="#about" class="btn btn-dark btn-lg">Find Out More</a> -->
@@ -203,6 +206,34 @@
 		</div>
 	</section>
 
+    <!-- Projects  -->
+    <aside id="projects" class="location">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h3 class="text-color-blue">Current Projects</h3>
+                </div>
+                <div class="col-lg-10">
+                    <ul class="list-group">
+                      <li>Brain-to-Brain: hacking on open BCI</li>
+                      <li>DueCredit: Automatic collection of references for methods used in analysis pipelines</li>
+                      <li>BIDSApps: Make DBIC specific BIDS Apps</li>
+                      <li>Hyperalignment Benchmark: Hack on comparing different algorithms for functional and hyper-alignment (impact of normalization: zscore vs PSC)</li>
+                      <li>Dataset publishing: Publish previously collected datasets (movies, etc):  prepare data descriptors, shape up for (re)sharing</li>
+                      <li>DBIC Auto BIDS: Hack on automated BIDS formatting for DICOMs collected on our new scanner</li>
+                      <li>Remote Scanner Triggering: Develop tools to trigger scanner from the internet (server/client connections)</li>
+                      <li>Parallelize Code: Develop python tools for easy local multi-processing or cluster job submission </li>
+                      <li>Universal DBIC psychopy presentation/trigger code: Standard python tools for trigger presentation</li>
+                      <li>DBIC wiki/website: Hack on updating the DBIC website (front-end design + content)</li>
+                      <li>nltools python3 compatible: Converting imagining analysis tools to python version 3</li>
+                      <li>fMRI QC automation/reporting: Develop tools for auto-qa'ing scans and creating visualizations</li>
+                      <li>DBIC punch card project (DBIC Productivity Analytics):  Like GitHub visualization for real time data collection</li>
+                    </ul><br>
+                </div>
+            </div>
+
+        </div>
+    </aside>
     <!-- Schedule -->
     <aside id="schedule" class="location">
         <div class="container">
@@ -251,19 +282,24 @@
                     <img src="img/neukom.png" class="img-responsive center-block" alt="Neukom Institute"/>
                   </a>
               </div>
-              <div class="col-md-4 col-xs-12">
+              <div class="col-sm-4 col-xs-12">
                   <a href="http://www.dartmouth.edu/~ccn" target="_blank">
                     <img src="img/ccn_logo.jpg" class="img-responsive center-block" alt="Center for Cognitive Neuroscience">
                   </a>
               </div>
-              <div class="text-center col-md-4 col-xs-12">
-                  <div class="center-block">
-                    <h4><a href="https://dartmouth.edu/faculty-directory/jay-g-hull" target="_blank">Jay Hull,<br>Associate Dean of Social Sciences</a></h4>
-                  </div>
+              <div class="text-center col-sm-4 col-xs-12">
+                    <h4><a href="https://dartmouth.edu/faculty-directory/jay-g-hull" target="_blank">
+                        Jay Hull,<br>Associate Dean of Social Sciences
+                    </a></h4>
               </div>
-              <div class="col-md-4 col-xs-12">
+              <div class="col-sm-4 col-xs-12">
                   <a href="http://www.amplemeal.com" target="_blank">
                       <img src="img/ample_logo.png" class="img-responsive center-block" alt="Ample Meal">
+                  </a>
+              </div>
+              <div class="col-sm-4 col-xs-12">
+                  <a href="http://www.centerforopenneuroscience.org" target="_blank">
+                    <img src="img/con_logo.png" class="img-responsive center-block" alt="Center for Open Neuroscience"/>
                   </a>
               </div>
             </div>
