Update URL for eventbrite

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				</div>
 		    </div>
             <br>
-			<a href="https://www.eventbrite.com/myevent?eid=31611515895" target="_blank" class="btn btn-dark btn-lg top5 left5">Register Now</a>
+			<a href="https://www.eventbrite.com/e/brainhack-dartmouth-tickets-31611515895" target="_blank" class="btn btn-dark btn-lg top5 left5">Register Now</a>
       <a href="https://brainhack-slack-invite.herokuapp.com/" target="_blank" class="btn btn-dark btn-lg top5 left5">Join Brainhack on Slack</a>
       <a href="#projects" target="_blank" class="btn btn-dark btn-lg top5 left5">Current Projects</a><br><br>
             <br><br>
