--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <br>
 			<a href="" target="_blank" class="btn btn-dark btn-lg top5 left5">Register Now</a>
       <a href="https://brainhack-slack-invite.herokuapp.com/" target="_blank" class="btn btn-dark btn-lg top5 left5">Join Brainhack on Slack</a>
-      <a href="http://brainhack.org/submit-project/" target="_blank" class="btn btn-dark btn-lg top5 left5">Submit a Project</a><br><br>
+      <a href="http://www.brainhack.org/global2018/projects.html" target="_blank" class="btn btn-dark btn-lg top5 left5">Submit a Project</a><br><br>
 
 			<br><br><br>
             <p>Photo by <a href="http://www.dartmouth.edu/~gallery/downloads/images/baker-1280x1024.jpg">Joseph Mehling '69</a></p>
