project format update

--- a/index.html
+++ b/index.html
@@ -210,14 +210,14 @@
                 </div>
                 <div class="col-lg-10">
                     <ul class="list-group">
-                      <li>BIDS support in PyMVPA</li>
-                      <li>DueCredit: Miscellaneous Issues</li>
-                      <li>BIDSApps: Make DBIC specific BIDS Apps</li>
-                      <li>Hyperalignment BIDSApp</li>
-                      <li>LEGO MR Phantom</li>
-                      <li>Automated spike sorting: MountainSort versus YASS</li>
-                      <li>Git "Inside Out" Documentation/Tutorial</li>
-                      <li>Rhythmic properties of ventral striatal neurons </li>
+                      <h4>BIDS support in PyMVPA</h4>
+                      <h4>DueCredit: Miscellaneous Issues</h4>
+                      <h4>BIDSApps: Make DBIC specific BIDS Apps</h4>
+                      <h4>Hyperalignment BIDSApp</h4>
+                      <h4>LEGO MR Phantom</h4>
+                      <h4>Automated spike sorting: MountainSort versus YASS</h4>
+                      <h4>Git "Inside Out" Documentation/Tutorial</h4>
+                      <h4>Rhythmic properties of ventral striatal neurons </h4>
                     </ul><br>
                 </div>
             </div>
@@ -238,9 +238,6 @@
             </section>
         </div>
     </aside>
-
-
-
 
 
 <!-- Call to Action -->
@@ -291,9 +288,6 @@
         <div class="row no-gutter top30">
         </div>
     </section>
-
-
-
 
 
     <!-- Footer -->
