grr funding added

--- a/index.html
+++ b/index.html
@@ -277,6 +277,9 @@
                         Jay Hull,<br>Associate Dean of Social Sciences
                     </a></h4>
               </div>
+              <div class="text-center col-sm-4 col-xs-12">
+                    <h4>Escobosa Family Fund</h4>
+              </div>
               <div class="col-sm-4 col-xs-12">
                   <a href="http://www.centerforopenneuroscience.org" target="_blank">
                     <img src="img/con_logo.png" class="img-responsive center-block" alt="Center for Open Neuroscience"/>
