sponsor year fixed

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         <div class="container-fluid">
             <div class="row top30 no-gutter">
                       <div class="col-xs-12 text-center">
-                        <br><h3 class="text-color-blue"><strong>Dartmouth Brainhack 2017 is generously sponsored by:</strong></h3>
+                        <br><h3 class="text-color-blue"><strong>Dartmouth Brainhack 2018 is generously sponsored by:</strong></h3>
                     </div>
                   </div>
           <div class="row no-gutter">
@@ -278,7 +278,7 @@
                     </a></h4>
               </div>
               <div class="text-center col-sm-4 col-xs-12">
-                    <h4>Escobosa Family Fund</h4>
+                    <h4><br> Escobosa Family Fund </h4>
               </div>
               <div class="col-sm-4 col-xs-12">
                   <a href="http://www.centerforopenneuroscience.org" target="_blank">
