--- a/index.html
+++ b/index.html
@@ -324,10 +324,10 @@
 
     <!-- Map -->
     <section id="map" class="map">
-	<iframe width="100%" height="100%" frameborder="0" scrolling="no" scrollwheel="false" marginheight="0" marginwidth="0" src="https://goo.gl/maps/mexbP6a273Y1Ywx47" style="border:0" allowfullscreen></iframe>
+	<iframe width="100%" height="100%" frameborder="0" scrolling="no" scrollwheel="false" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3040.9664262898714!2d-74.65474418460636!3d40.34309077937382!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3e6c53815e167%3A0x52f009cb85093372!2sPrinceton%20Neuroscience%20Institute!5e0!3m2!1sen!2sus!4v1569436666649!5m2!1sen!2sus" style="border:0" allowfullscreen></iframe>
 	    <br />
         <small>
-        <a href="https://goo.gl/maps/mexbP6a273Y1Ywx47"></a>
+        <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3040.9664262898714!2d-74.65474418460636!3d40.34309077937382!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3e6c53815e167%3A0x52f009cb85093372!2sPrinceton%20Neuroscience%20Institute!5e0!3m2!1sen!2sus!4v1569436666649!5m2!1sen!2sus"></a>
 
 	    </small>
     </section>
