--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <a href="http://brainhack.org/submit-project/" target="_blank" class="btn btn-dark btn-lg top5 left5">Submit a Project</a><br><br>
 
 			<br><br><br>
-            <p>Photo by <a href="https://upload.wikimedia.org/wikipedia/commons/0/04/Nassau_Hall_Princeton.JPG">Smallbones</a></p>
+            <p>Photo by <a href="https://upload.wikimedia.org/wikipedia/commons/c/c4/Princeton_University_tiger_crest2.jpg">Quantockgoblin</a></p>
             <!-- <a href="#about" class="btn btn-dark btn-lg">Find Out More</a> -->
         </div>
           <div class="text-bottom-right">
