--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h3 class="text-color-blue">Hosted at: <a href="https://pni.princeton.edu/">Princeton Neuroscience Institute and Department of Psychology, Princeton University</a></h3>
+                    <h3 class="text-color-blue">Hosted at: <a href="https://pni.princeton.edu/">Princeton Neuroscience Institute and Department of Psychology</a></h3>
                 </div>
             </div>
         </div>
