Different tiger photo

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <a href="http://brainhack.org/submit-project/" target="_blank" class="btn btn-dark btn-lg top5 left5">Submit a Project</a><br><br>
 
 			<br><br><br>
-            <p>Photo by <a href="https://commons.wikimedia.org/wiki/File:Princeton_Tiger_Nassau_Hall_2.JPG">Smallbones</a></p>
+            <p>Photo by <a href="https://commons.wikimedia.org/wiki/File:Princeton_Tiger_Nassau_Hall_1.JPG">Smallbones</a></p>
             <!-- <a href="#about" class="btn btn-dark btn-lg">Find Out More</a> -->
         </div>
           <div class="text-bottom-right">
@@ -364,7 +364,7 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h3><strong>For more information:</strong></h3>
-                    <a href="mailto:snastase@princeton.edu" class="text-color-blue">snastase@princeton.edu</a>
+                    <a href="mailto:['amennen@princeton.edu', 'snastase@princeton.edu']" class="text-color-blue">['amennen@princeton.edu', 'snastase@princeton.edu']</a>
                     <br>
                     <br>
                     <h3><strong>Organizers:</strong>
