--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h3><strong>For more information:</strong></h3>
-                    <a href="mailto:['amennen@princeton.edu', 'snastase@princeton.edu']" class="text-color-blue">['amennen@princeton.edu', 'snastase@princeton.edu']</a>
+                    <a href="mailto:snastase@princeton.edu" class="text-color-blue">snastase@princeton.edu</a>
                     <br>
                     <br>
                     <h3><strong>Organizers:</strong>
