--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 				</div>
 		    </div>
             <br>
-			<a href="" target="_blank" class="btn btn-dark btn-lg top5 left5">Register Now</a>
-      <a href="https://brainhack-slack-invite.herokuapp.com/" target="_blank" class="btn btn-dark btn-lg top5 left5">Join Brainhack on Slack</a>
-      <a href="http://brainhack.org/submit-project/" target="_blank" class="btn btn-dark btn-lg top5 left5">Submit a Project</a><br><br>
+			<a href="https://forms.gle/DoVJXmPiSK8tn1mE6" target="_blank" class="btn btn-dark btn-lg top5 left5">Register Now</a>
+      <a href="https://mattermost.brainhack.org/brainhack/channels/brainhack-princeton" target="_blank" class="btn btn-dark btn-lg top5 left5">Join Princeton Brainhack on Mattermost</a>
+      <a href="https://github.com/brainhack-princeton/brainhack-princeton-2020/issues" target="_blank" class="btn btn-dark btn-lg top5 left5">Submit a Project</a><br><br>
 
 			<br><br><br>
             <p>Photo by <a href="https://commons.wikimedia.org/wiki/File:Princeton_Tiger_Nassau_Hall_2.JPG">Smallbones</a></p>
@@ -179,17 +179,16 @@
         <div class="container">
             <div class="row text-center">
                  <div class="col-xl-8 col-xl-offset-2 col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
-					<p><h3><a href="" target="_blank">Registration for the Brainhack Princeton 2020 is now open!</a></h3></p>
-		    <p>The Brainhack Princeton 2020 is an official satellite event of the <a href="http://events.brainhack.org/global2020/" target="_blank">International Global Brainhack 2020</a> that is organized by
+					<p><h3><a href="https://forms.gle/DoVJXmPiSK8tn1mE6" target="_blank">Registration for Brainhack Princeton 2020 is now open!</a></h3></p>
+		    <p>Brainhack Princeton 2020 is an official satellite event of the international <a href="https://brainhack.org/global2020/" target="_blank">Global Brainhack 2020.</a>
             
-            Cameron Craddock
-            
-           . The goal of the hackathon is to bring together researchers with disparate backgrounds to collaborate on open science projects in neuroimaging.</p>
+           The goal of the hackathon is to bring together researchers with disparate backgrounds to collaborate on open science projects in neuroimaging.</p>
 					<h4>Dates: December 9-11, 2020</h4>
 					<h4>Costs: Free for members of the Princeton community</h4>
-					<h4>Location: <a href="#map"> Princeton, NJ, USA</a></h4>
-					<p>Participants are encouraged to post project ideas to <a href="http://www.brainhack.org" target="_blank">www.brainhack.org</a> and to submit a report describing their project to the <a href="http://www.brainhack.org/proceedings">2020 Brainhack Proceedings</a> that will be published by <a href="http://gigasciencejournal.com/">Gigascience</a> after the event.</p>
-					<p>Please join <a href="https://brainhack-slack-invite.herokuapp.com/" target="_blank">the Brainhack Slack project</a> for updated information on the developing Hackathon content and to contribute your own ideas.</p>
+                    <h4>Location: Virtual via Zoom</h4>
+                    <p>The theme of this year's hackathon is contributing content to the <a href="https://brainhack-princeton.github.io/handbook/" target="_blank">Princeton Handbook for Reproducible Neuroimaging</a>. However, participants are welcome to work on any project! We are also looking for participants who are willing to lead tutorials (covering any resource you think is useful) during the hackathon.</p>
+					<p>Please visit the <a href="https://github.com/brainhack-princeton/brainhack-princeton-2020" target="_blank">Princeton Brainhack GitHub repository</a> for updated information on the developing hackathon content and to contribute your own ideas.</p>
+                    <p>Participants are encouraged to submit project and tutorial ideas <a href="https://github.com/brainhack-princeton/brainhack-princeton-2020/issues" target="_blank">here</a>.</p>
                    </div>
 			</div>
 		</div>
@@ -334,21 +333,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h3 class="text-color-blue">Hosted at: <a href="https://pni.princeton.edu/">Princeton Neuroscience Institute and Department of Psychology</a></h3>
+                    <h3 class="text-color-blue">Hosted by: <a href="https://pni.princeton.edu/">Princeton Neuroscience Institute and Department of Psychology</a></h3>
                 </div>
             </div>
         </div>
 
-
-    <!-- Map -->
-    <section id="map" class="map">
-	<iframe width="100%" height="100%" frameborder="0" scrolling="no" scrollwheel="false" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3040.9664262898714!2d-74.65474418460636!3d40.34309077937382!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3e6c53815e167%3A0x52f009cb85093372!2sPrinceton%20Neuroscience%20Institute!5e0!3m2!1sen!2sus!4v1569436666649!5m2!1sen!2sus" style="border:0" allowfullscreen></iframe>
-	    <br />
-        <small>
-        <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3040.9664262898714!2d-74.65474418460636!3d40.34309077937382!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3e6c53815e167%3A0x52f009cb85093372!2sPrinceton%20Neuroscience%20Institute!5e0!3m2!1sen!2sus!4v1569436666649!5m2!1sen!2sus"></a>
-
-	    </small>
-    </section>
 
     </aside>
     <!-- <section id="sponsors" class="no-padding">
