add code of conduct link

--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@
 		    </div>
             <br>
 			<a href="https://forms.gle/DoVJXmPiSK8tn1mE6" target="_blank" class="btn btn-dark btn-lg top5 left5">Register Now</a>
-      <a href="https://mattermost.brainhack.org/brainhack/channels/brainhack-princeton" target="_blank" class="btn btn-dark btn-lg top5 left5">Join Princeton Brainhack on Mattermost</a>
+      <a href="https://github.com/brainhack-princeton/brainhack-princeton-2020#schedule" target="_blank" class="btn btn-dark btn-lg top5 left5">Schedule</a><br><br>
       <a href="https://github.com/brainhack-princeton/brainhack-princeton-2020/issues" target="_blank" class="btn btn-dark btn-lg top5 left5">Submit a Project</a><br><br>
+      <a href="https://brainhack.org/code-of-conduct.html" target="_blank" class="btn btn-dark btn-lg top5 left5">Code of Conduct</a><br><br>
+      <a href="https://mattermost.brainhack.org/brainhack/channels/brainhack-princeton" target="_blank" class="btn btn-dark btn-lg top5 left5">Join Princeton Brainhack on Mattermost</a>
 
 			<br><br><br>
             <p>Photo by <a href="https://commons.wikimedia.org/wiki/File:Princeton_Tiger_Nassau_Hall_2.JPG">Smallbones</a></p>
