update zoom info

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
            The goal of the hackathon is to bring together researchers with disparate backgrounds to collaborate on open science projects in neuroimaging.</p>
 					<h4>Dates: December 9-11, 2020</h4>
 					<h4>Costs: Free for members of the Princeton community</h4>
-                    <h4>Location: Virtual via Zoom</h4>
+                    <h4>Location: Virtual via Zoom (link will be sent to registered participants)</h4>
                     <p>The theme of this year's hackathon is contributing content to the <a href="https://brainhack-princeton.github.io/handbook/" target="_blank">Princeton Handbook for Reproducible Neuroimaging</a>. However, participants are welcome to work on any project! We are also looking for participants who are willing to lead tutorials (covering any resource you think is useful) during the hackathon.</p>
 					<p>Please visit the <a href="https://github.com/brainhack-princeton/brainhack-princeton-2020" target="_blank">Princeton Brainhack GitHub repository</a> for updated information on the developing hackathon content and to contribute your own ideas.</p>
                     <p>Participants are encouraged to submit project and tutorial ideas <a href="https://github.com/brainhack-princeton/brainhack-princeton-2020/issues" target="_blank">here</a>.</p>
